add photo uploader
Added photo uploader which use cloudinary platform