@@ -8,165 +8,37 @@ group = 'com.BfDmichal'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     implementation 'junit:junit:4.13'
+    compileOnly 'org.projectlombok:lombok'
+//	compile 'org.postgresql:postgresql'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
-    testImplementation 'org.springframework.security:spring-security-test'
+    compile 'com.cloudinary:cloudinary-core:1.26.0'
+    compile 'com.cloudinary:cloudinary-http44:1.26.0'
+
+    compile('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
+//    providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
 
 test {
     useJUnitPlatform()
 }
-//plugins {
-//    id 'org.springframework.boot' version '2.3.4.RELEASE'
-//    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-//    id 'java'
-//}
-//
-//group = 'com.BfDmichal'
-//version = '0.0.1-SNAPSHOT'
-//sourceCompatibility = '1.8'
-//
-//configurations {
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
-//
-//repositories {
-//    mavenCentral()
-//}
-//
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'junit:junit:4.13'
-//    compileOnly 'org.projectlombok:lombok'
-//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//    runtimeOnly 'mysql:mysql-connector-java'
-//	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.0'
-//	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-//	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
-//    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
-//	compile 'org.postgresql:postgresql'
-//	annotationProcessor 'org.projectlombok:lombok'
-//	testImplementation 'org.springframework.security:spring-security-test'
-//    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-//        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-//    }
-//	compile group: 'com.cloudinary', name: 'cloudinary-core', version: '1.26.0'
-//	compile 'com.cloudinary:cloudinary-http44:1.26.0'
-
-//	compile('io.springfox:springfox-swagger2:2.7.0')
-//	compile('io.springfox:springfox-swagger-ui:2.7.0')
-//	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
-
-//}
-//gradle.projectsEvaluated {
-//    tasks.withType(Test) {
-//        options.compilerArgs
-////	jvmArgs '--enable-preview'
-//    }
-//}
-//test {
-//    useJUnitPlatform()
-//}
-//sourceSets {
-//    main {
-//        java {
-//            //srcDir 'src'
-//        }
-//    }
-//    test {
-//        java {
-//            srcDir 'java'
-//        }
-//    }
-//}
-////------------------------------------
-////buildscript {
-////    repositories {
-////        mavenCentral()
-////        maven { url 'https://repo.spring.io/milestone' }
-////        maven { url 'https://repo.spring.io/snapshot' }
-////    }
-////    dependencies {
-////        classpath 'org.springframework.cloud:spring-cloud-contract-gradle-plugin:2.2.4.RELEASE'
-////    }
-////}
-////
-//plugins {
-//    id 'org.springframework.boot' version '2.3.3.RELEASE'
-//    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-////    id 'org.asciidoctor.convert' version '1.5.8'
-//    id 'java'
-//}
-//
-////apply plugin: 'spring-cloud-contract'
-//
-//group = 'com.BfDmichal'
-//version = '0.0.1-SNAPSHOT'
-//sourceCompatibility = '1.8'
-//
-//configurations {
-//    compileOnly {
-//        extendsFrom annotationProcessor
-//    }
-//}
-//
-//repositories {
-//    mavenCentral()
-////    maven { url 'https://repo.spring.io/milestone' }
-////    maven { url 'https://repo.spring.io/snapshot' }
-//}
-//
-//
-////ext {
-////    set('snippetsDir', file("build/generated-snippets"))
-////    set('springCloudVersion', "Hoxton.BUILD-SNAPSHOT")
-////}
-//
-//dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.springframework.boot:spring-boot-devtools'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    runtimeOnly 'mysql:mysql-connector-java'
-//    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-//        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-//    }
-//    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-verifier'
-//    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-//}
-//
-////dependencyManagement {
-////    imports {
-////        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-////    }
-////}
-//
-////contracts {
-////    targetFramework = org.springframework.cloud.contract.verifier.config.TestFramework.JUNIT5
-////}
-//
-//test {
-////    outputs.dir snippetsDir
-//    useJUnitPlatform()
-//}
-//
-////asciidoctor {
-////    inputs.dir snippetsDir
-////    dependsOn test
-////}
-////}
